# sqlite3secure

./: .gitignore  CMakeLists.txt  LICENCE.txt  autogen.sh  configure.ac  sqlite3secure-dll.vcxproj  sqlite3secure-dll.vcxproj.filters  sqlite3secure-lib.vcxproj  sqlite3secure-lib.vcxproj.filters  sqlite3secure.sln
test/: test.cpp
